--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <small>20 de Março de 2023</small> <!--tag de texto pequeno-->
         <h1>Jornada do Zero à Primeira Vaga</h1> <!--tag de Título-->
         <div>
-          <img src="./assets/jornada.png" 
-          alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Programação"/> <!--tag para adicionar imagem-->
+          <img src="./assets/nlwfoto.png" 
+          alt="nlw foto"/> <!--tag para adicionar imagem-->
         </div>
         <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique...
